--- a/appointment.html
+++ b/appointment.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initialscale=1.0">
     <link rel="stylesheet" href="Kuanysh_Aitzhanov_style.css">
     <link rel="stylesheet" href="GazizaDesign.css">
-    <link rel="stylesheet" href="Liana_style.css">
     <title>Appointment - Densaulyq</title>
 </head>
 <body>
@@ -68,7 +67,7 @@
         <input type="time"><br>
         <br>
         <br>
-        <input type="submit" value="Register">
+        <input type="submit" value="Register" class=pulsate>
         <br>
         <br>
     </form>
