--- a/diseases.html
+++ b/diseases.html
@@ -19,7 +19,7 @@
   </header>
 
   <nav>
-      <ul>
+      <ul >
           <li><a href="registration.html">Log in/Sign up</a></li>
           <li><a href="appointment.html">Make an Appointment</a></li>
           <li><a href="analysis.html">Tests and Your Health</a></li>
@@ -33,15 +33,15 @@
 
   <section>
 
-      <article>
-          <h3>Severe Acute Respiratory Syndrome (SARS)</h3>
+      <article >
+          <h3 class="typing-demo">Severe Acute Respiratory Syndrome (SARS)</h3>
 
           <figure>
               <img src="img/sars%20virus.jpg" alt="SARS Virus" width="250" height="250">
               <figcaption>SARS virus under the microscope</figcaption>
           </figure>
 
-          <p>
+          <p >
               SARS (Severe Acute Respiratory Syndrome) is a viral respiratory illness caused by the SARS-associated coronavirus (SARS-CoV). It was first identified in 2002 in southern China and led to a global outbreak in 2003. SARS primarily spreads through respiratory droplets when an infected person coughs or sneezes.
           </p>
 
@@ -63,7 +63,7 @@
 
 <section>
     <article>
-        <h3>Monkeypox</h3>
+        <h3 class="typing-demo">Monkeypox</h3>
 
         <figure>
             <img src="img/monkeypox.jpg" alt="Monkeypox Virus" width="250" height="250">
@@ -75,7 +75,7 @@
         </p>
 
         <p>Symptoms of monkeypox include:</p>
-        <ul>
+        <ul >
             <li>Fever</li>
             <li>Headache</li>
             <li>Muscle aches and backache</li>
@@ -93,7 +93,7 @@
 </section>
 <section>
     <article>
-<h3>Coronavirus (COVID-19)</h3>
+<h3 class="typing-demo">Coronavirus (COVID-19)</h3>
 
 <figure>
     <img src="img/coronavirus.jpg" alt="Coronavirus" width="250" height="250">
@@ -104,8 +104,8 @@
     Coronavirus disease (COVID-19) is caused by the SARS-CoV-2 virus, a novel coronavirus that was first identified in Wuhan, China, in December 2019. It led to a global pandemic, causing widespread illness and disruptions. COVID-19 primarily spreads through respiratory droplets and can infect individuals through close contact or touching contaminated surfaces.
 </p>
 
-<p>Symptoms of COVID-19 include:</p>
-<ul>
+<p >Symptoms of COVID-19 include:</p>
+<ul >
     <li>Fever or chills</li>
     <li>Dry cough</li>
     <li>Shortness of breath or difficulty breathing</li>
@@ -126,7 +126,7 @@
 </section>
 <section>
     <article>
-<h3>Heart Disease</h3>
+<h3 class="typing-demo">Heart Disease</h3>
 
 <figure>
     <img src="img/heart.jpg" alt="Heart Disease" width="250" height="250">
@@ -155,7 +155,7 @@
 
 <section>
     <article>
-        <h3>Fever</h3>
+        <h3 class="typing-demo">Fever</h3>
 
         <figure>
             <img src="img/thumb.jpeg" alt="High Temperature" width="250" height="250">
