--- a/funding.html
+++ b/funding.html
@@ -39,7 +39,7 @@
         </select>
         <br><br>
 
-        <input type="submit" value="Next">
+        <a href="appointment.html">Next</a>
     </form>
 </section>
 
