--- a/registration.html
+++ b/registration.html
@@ -25,12 +25,12 @@
 </nav>
 <fieldset class="registration">
     <legend><h1>Already in? Log in!</h1></legend>
-    <form action="personal_account.html" method="get">
+    <form action="personal_account.html" method="get" >
         <label>email</label><br>
         <input type="email"><br>
         <label>password</label><br>
         <input type="password"><br><br>
-        <input type="submit" value="Log in">
+        <input type="submit" value="Log in"  class="pulsate">
     </form>
 </fieldset>
 <br>
@@ -53,7 +53,7 @@
         <input type="password"><br><br>
         <label>Approve password:</label><br>
         <input type="password"><br><br>
-        <input type="submit" value="Registration">
+        <input type="submit" value="Registration"  class="pulsate">
     </form>
 </fieldset>
 <br>
