--- a/home_page.html
+++ b/home_page.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initialscale=1.0">
     <link rel="stylesheet" href="Kuanysh_Aitzhanov_style.css">
+    <link rel="stylesheet" href="Liana_style.css">
     <title>Densaulyq</title>
 </head>
 <body>
