--- a/registration.html
+++ b/registration.html
@@ -27,9 +27,9 @@
     <legend><h1>Already in? Log in!</h1></legend>
     <form action="personal_account.html" method="get" >
         <label>email</label><br>
-        <input type="email"><br>
+        <input type="email" placeholder="johnwickofficial@gmail.com"><br>
         <label>password</label><br>
-        <input type="password"><br><br>
+        <input type="password" placeholder="********"><br><br>
         <input type="submit" value="Log in"  class="pulsate">
     </form>
 </fieldset>
@@ -40,19 +40,19 @@
     <legend font-size = "50px"; padding = "10px"; font-family = "Arial"; font-size><h1>First time? THEN SIGN IN</h1></legend>
     <form action="personal_account.html" method="get">
         <label>First name:</label><br>
-        <input type="text"><br>
+        <input type="text" placeholder = "John"><br>
         <label>Last name:</label><br>
-        <input type="text"><br>
+        <input type="text" placeholder="Wick"><br>
         <label>E-mail:</label><br>
-        <input type="email"><br>
+        <input type="email" placeholder="johnwickofficial@gmail.com"><br>
         <br>
         <label>Date of birth:</label><br>
         <input type="date"><br>
         <br>
         <label>Password:</label><br>
-        <input type="password"><br><br>
+        <input type="password" placeholder="********"><br><br>
         <label>Approve password:</label><br>
-        <input type="password"><br><br>
+        <input type="password" placeholder="********"><br><br>
         <input type="submit" value="Registration"  class="pulsate">
     </form>
 </fieldset>
