--- a/diseases.html
+++ b/diseases.html
@@ -24,7 +24,6 @@
           <li><a href="appointment.html">Make an Appointment</a></li>
           <li><a href="analysis.html">Tests and Your Health</a></li>
           <li><a href="personal_account.html">Personal Account</a></li>
-          <li><a href="diseases.html">About Diseases</a></li>
           <li><a href="doctors.html">Doctors' Database</a></li>
           <li><a href="recommend.html">General Recommendations</a></li>
           <li><a href="funding.html">Financing</a></li>
@@ -34,7 +33,7 @@
   <section>
 
       <article >
-          <h3 class="typing-demo">Severe Acute Respiratory Syndrome (SARS)</h3>
+          <h3 class=fade-in-section>Severe Acute Respiratory Syndrome (SARS)</h3>
 
           <figure>
               <img src="img/sars%20virus.jpg" alt="SARS Virus" width="250" height="250">
