--- a/diseases.html
+++ b/diseases.html
@@ -33,7 +33,7 @@
   <section>
 
       <article >
-          <h3 class=fade-in-section>Severe Acute Respiratory Syndrome (SARS)</h3>
+          <h3>Severe Acute Respiratory Syndrome (SARS)</h3>
 
           <figure>
               <img src="img/sars%20virus.jpg" alt="SARS Virus" width="250" height="250">
@@ -62,7 +62,7 @@
 
 <section>
     <article>
-        <h3 class="typing-demo">Monkeypox</h3>
+        <h3 Monkeypox</h3>
 
         <figure>
             <img src="img/monkeypox.jpg" alt="Monkeypox Virus" width="250" height="250">
@@ -92,7 +92,7 @@
 </section>
 <section>
     <article>
-<h3 class="typing-demo">Coronavirus (COVID-19)</h3>
+<h3 >Coronavirus (COVID-19)</h3>
 
 <figure>
     <img src="img/coronavirus.jpg" alt="Coronavirus" width="250" height="250">
@@ -125,7 +125,7 @@
 </section>
 <section>
     <article>
-<h3 class="typing-demo">Heart Disease</h3>
+<h3 >Heart Disease</h3>
 
 <figure>
     <img src="img/heart.jpg" alt="Heart Disease" width="250" height="250">
@@ -154,7 +154,7 @@
 
 <section>
     <article>
-        <h3 class="typing-demo">Fever</h3>
+        <h3 >Fever</h3>
 
         <figure>
             <img src="img/thumb.jpeg" alt="High Temperature" width="250" height="250">
