--- a/appointment.html
+++ b/appointment.html
@@ -37,22 +37,24 @@
             <br>
         </section>
         <h1>Choose the illness.</h1><br>
-        <select>
-            <option>Coronavirus</option>
-            <option>Monkeypox</option>
-            <option>SARS</option>
-            <option>Fever</option>
-            <option>Heart disease</option>
-        </select>
+        <div class="custom-select">
+            <select>
+                <option>Coronavirus</option>
+                <option>Monkeypox</option>
+                <option>SARS</option>
+                <option>Fever</option>
+                <option>Heart disease</option>
+            </select>
+        </div>
         <br>
         <br>
         <a>Choose the doctor.</a><br>
-        <select>
-            <option>Sembayev N.</option>
-            <option>Tanirbegren G.</option>
-            <option>Aitzhanov K.</option>
-            <option>Smatulla L.</option>
-        </select>
+            <select>
+                <option>Sembayev N.</option>
+                <option>Tanirbegren G.</option>
+                <option>Aitzhanov K.</option>
+                <option>Smatulla L.</option>
+            </select>
         <br>
         <br>
         <a>Reason of the visit.</a><br>
@@ -72,6 +74,9 @@
         <br>
     </form>
 </fieldset>
+<br>
+<br>
+<br>
 <footer>
     <p>2024 Densauluq. Gaziza Tanirbergen, Liana Smatulla, Kuanysh Aitzhanov.</p>
 </footer>
