--- a/analysis.html
+++ b/analysis.html
@@ -25,6 +25,7 @@
         <li><a href="funding.html">Financing</a></li>
     </ul>
 </nav>
+<div class="registration">
 <details>
     <summary>Most recent analysis</summary>
     Macronutrient Balance:
@@ -39,10 +40,12 @@
         leads an active lifestyle with healthy habits. It is recommended that he continue maintaining a balanced diet, staying
         physically active, and focusing on preventive health measures.
 </details>
+
 <br>
 <br>
 <a>Choose the date of visiting.</a><br>
 <input type="date"><br>
+</div>
 <br>
 <br>
 <section class="analysis">
