--- a/registration.html
+++ b/registration.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initialscale=1.0">
     <link rel="stylesheet" href="Kuanysh_Aitzhanov_style.css">
     <link rel="stylesheet" href="GazizaDesign.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <title>Log in/Sign in - Densauluq</title>
 </head>
 <body>
@@ -23,39 +24,47 @@
         <li><a href="funding.html">Financing</a></li>
     </ul>
 </nav>
-<fieldset class="registration">
-    <legend><h1>Already in? Log in!</h1></legend>
-    <form action="personal_account.html" method="get" >
-        <label>email</label><br>
-        <input type="email" placeholder="johnwickofficial@gmail.com"><br>
-        <label>password</label><br>
-        <input type="password" placeholder="********"><br><br>
-        <input type="submit" value="Log in"  class="pulsate">
-    </form>
-</fieldset>
-<br>
-<img src="img/redblue.png" class="image-animation">
-<br>
-<fieldset class="registration">
-    <legend font-size = "50px"; padding = "10px"; font-family = "Arial"; font-size><h1>First time? THEN SIGN IN</h1></legend>
-    <form action="personal_account.html" method="get">
-        <label>First name:</label><br>
-        <input type="text" placeholder = "John"><br>
-        <label>Last name:</label><br>
-        <input type="text" placeholder="Wick"><br>
-        <label>E-mail:</label><br>
-        <input type="email" placeholder="johnwickofficial@gmail.com"><br>
-        <br>
-        <label>Date of birth:</label><br>
-        <input type="date"><br>
-        <br>
-        <label>Password:</label><br>
-        <input type="password" placeholder="********"><br><br>
-        <label>Approve password:</label><br>
-        <input type="password" placeholder="********"><br><br>
-        <input type="submit" value="Registration"  class="pulsate">
-    </form>
-</fieldset>
+<div class="container">
+    <div class="row">
+        <div class="col-md-6">
+            <fieldset class="registration">
+                <legend><h1>Already in? Log in!</h1></legend>
+                <form action="personal_account.html" method="get" >
+                    <label>email</label><br>
+                    <input type="email" placeholder="johnwickofficial@gmail.com"><br>
+                    <label>password</label><br>
+                    <input type="password" placeholder="********"><br><br>
+                    <input type="submit" value="Log in"  class="pulsate">
+                </form>
+            </fieldset>
+        </div>
+        <div class="col-md-6">
+            <img src="img/redblue.png" class="image-animation">
+        </div>
+        <div class="col-md-6">
+            <fieldset class="registration">
+                <legend font-size = "50px"; padding = "10px"; font-family = "Arial"; font-size><h1>First time? THEN SIGN IN</h1></legend>
+                <form action="personal_account.html" method="get">
+                    <label>First name:</label><br>
+                    <input type="text" placeholder = "John"><br>
+                    <label>Last name:</label><br>
+                    <input type="text" placeholder="Wick"><br>
+                    <label>E-mail:</label><br>
+                    <input type="email" placeholder="johnwickofficial@gmail.com"><br>
+                    <br>
+                    <label>Date of birth:</label><br>
+                    <input type="date"><br>
+                    <br>
+                    <label>Password:</label><br>
+                    <input type="password" placeholder="********"><br><br>
+                    <label>Approve password:</label><br>
+                    <input type="password" placeholder="********"><br><br>
+                    <input type="submit" value="Registration"  class="pulsate">
+                </form>
+            </fieldset>
+        </div>
+    </div>
+</div>
 <br>
 <br>
 <br>
