--- a/analysis.html
+++ b/analysis.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initialscale=1.0">
     <link rel="stylesheet" href="GazizaDesign.css">
     <link rel="stylesheet" href="Kuanysh_Aitzhanov_style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <title>Health analysis - Densauluq</title>
 </head>
 <body>
