--- a/appointment.html
+++ b/appointment.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initialscale=1.0">
     <link rel="stylesheet" href="Kuanysh_Aitzhanov_style.css">
     <link rel="stylesheet" href="GazizaDesign.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <title>Appointment - Densaulyq</title>
 </head>
 <body>
@@ -15,16 +16,22 @@
 </header>
 
 <nav>
-    <ul>
-        <li><a href="home_page.html">Return to home page</a></li>
-        <li><a href="registration.html">Log out</a></li>
-        <li><a href="personal_account.html">Personal Account</a></li>
-        <li><a href="analysis.html">View test results</a></li>
-        <li><a href="diseases.html">About diseases</a></li>
-        <li><a href="doctors.html">Doctors' database</a></li>
-        <li><a href="recommend.html">General recommendations</a></li>
-        <li><a href="funding.html">Financing</a></li>
-    </ul>
+    <div class="container">
+        <div class="row">
+            <ul>
+                <div class="col-md-2">
+                    <li><a href="home_page.html">Return to home page</a></li>
+                    <li><a href="registration.html">Log out</a></li>
+                    <li><a href="personal_account.html">Personal Account</a></li>
+                    <li><a href="analysis.html">View test results</a></li>
+                    <li><a href="diseases.html">About diseases</a></li>
+                    <li><a href="doctors.html">Doctors' database</a></li>
+                    <li><a href="recommend.html">General recommendations</a></li>
+                    <li><a href="funding.html">Financing</a></li>
+                </div>
+            </ul>
+        </div>
+    </div>
 </nav>
 <fieldset class="registration">
     <form action="personal_account.html" method="get">
