--- a/appointment.html
+++ b/appointment.html
@@ -15,24 +15,20 @@
     <p>You can choose any centers, any specialists and even any time.</p>
 </header>
 
-<nav>
-    <div class="container">
-        <div class="row">
-            <ul>
-                <div class="col-md-2">
-                    <li><a href="home_page.html">Return to home page</a></li>
-                    <li><a href="registration.html">Log out</a></li>
-                    <li><a href="personal_account.html">Personal Account</a></li>
-                    <li><a href="analysis.html">View test results</a></li>
-                    <li><a href="diseases.html">About diseases</a></li>
-                    <li><a href="doctors.html">Doctors' database</a></li>
-                    <li><a href="recommend.html">General recommendations</a></li>
-                    <li><a href="funding.html">Financing</a></li>
-                </div>
+<nav class="navbar navbar-expand-lg">
+            <ul class="navbar-nav">
+                    <li class="nav-item"><a href="home_page.html">Return to home page</a></li>
+                    <li class="nav-item"><a href="registration.html">Log out</a></li>
+                    <li class="nav-item"><a href="personal_account.html">Personal Account</a></li>
+                    <li class="nav-item"><a href="analysis.html">View test results</a></li>
+                    <li class="nav-item"><a href="diseases.html">About diseases</a></li>
+                    <li class="nav-item"><a href="doctors.html">Doctors' database</a></li>
+                    <li class="nav-item"><a href="recommend.html">General recommendations</a></li>
+                    <li class="nav-item"><a href="funding.html">Financing</a></li>
             </ul>
-        </div>
-    </div>
 </nav>
+<br>
+<br>
 <fieldset class="registration">
     <form action="personal_account.html" method="get">
         <section>
