--- a/registration.html
+++ b/registration.html
@@ -12,18 +12,20 @@
 <header>
     <h1>Account on Densaulyq?</h1>
 </header>
-<nav>
-    <ul>
-        <li><a href="home_page.html">Main</a></li>
-        <li><a href="appointment.html">Make an Appointment</a></li>
-        <li><a href="analysis.html">Tests and Your Health</a></li>
-        <li><a href="personal_account.html">Personal Account</a></li>
-        <li><a href="diseases.html">About Diseases</a></li>
-        <li><a href="doctors.html">Doctors' Database</a></li>
-        <li><a href="recommend.html">General Recommendations</a></li>
-        <li><a href="funding.html">Financing</a></li>
+<nav class="navbar navbar-expand-lg">
+    <ul class="navbar-nav">
+        <li class="nav-item"><a href="home_page.html">Main</a></li>
+        <li class="nav-item"><a href="appointment.html">Make an Appointment</a></li>
+        <li class="nav-item"><a href="analysis.html">Tests and Your Health</a></li>
+        <li class="nav-item"><a href="personal_account.html">Personal Account</a></li>
+        <li class="nav-item"><a href="diseases.html">About Diseases</a></li>
+        <li class="nav-item"><a href="doctors.html">Doctors' Database</a></li>
+        <li class="nav-item"><a href="recommend.html">General Recommendations</a></li>
+        <li class="nav-item"><a href="funding.html">Financing</a></li>
     </ul>
 </nav>
+<br>
+<br>
 <div class="container">
     <div class="row">
         <div class="col-md-5">
