--- a/appointment.html
+++ b/appointment.html
@@ -41,7 +41,7 @@
         </section>
         <h1>Choose the illness.</h1><br>
         <div class="custom-select">
-            <select>
+            <select class="form-control form-control-lg">
                 <option>Coronavirus</option>
                 <option>Monkeypox</option>
                 <option>SARS</option>
@@ -52,7 +52,7 @@
         <br>
         <br>
         <a>Choose the doctor.</a><br>
-            <select>
+            <select class="form-control form-control-lg">
                 <option>Sembayev N.</option>
                 <option>Tanirbegren G.</option>
                 <option>Aitzhanov K.</option>
