--- a/registration.html
+++ b/registration.html
@@ -36,7 +36,7 @@
                     <input type="email" placeholder="johnwickofficial@gmail.com"><br>
                     <label>password</label><br>
                     <input type="password" placeholder="********"><br><br>
-                    <input type="submit" value="Log in"  class="pulsate">
+                    <input type="submit" value="Log in" class="btn btn-primary mb-2">
                 </form>
             </fieldset>
             <br>
@@ -67,7 +67,7 @@
                     <input type="password" placeholder="********"><br><br>
                     <label>Approve password:</label><br>
                     <input type="password" placeholder="********"><br><br>
-                    <input type="submit" value="Registration"  class="pulsate">
+                    <input type="submit" value="Registration" class="btn btn-primary mb-2">
                 </form>
             </fieldset>
             <br>
