--- a/home_page.html
+++ b/home_page.html
@@ -3,80 +3,104 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initialscale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="Kuanysh_Aitzhanov_style.css">
-    <link rel="stylesheet" href="Liana_style.css">
+<!--    <link rel="stylesheet" href="Liana_style.css">-->
     <title>Densaulyq</title>
 </head>
 <body>
 
-<header>
-    <img src="img/logo.png" alt="Densauluq Logo" style="height: 80px; width: auto;" class="img">
-    <img src="img/imgbg.png" alt="Densauluq Name" style="height: 60px; width: auto;" class="img">
-    <hr>
+<header class="text-center text-light py-3" style="background-color: #3a3a3a  ;">
+    <img src="img/logo.png" alt="Densauluq Logo" style="height: 80px; width: auto;" class="img-fluid">
+    <img src="img/imgbgnew.png" alt="Densauluq Name" style="height: 60px; width: auto;" class="img-fluid">
+    <hr class="my-3">
     <h1>Medical Organization in Kazakhstan</h1>
     <p>Providing high-quality healthcare services for the people of Kazakhstan.</p>
 </header>
 
 <hr>
 
-<nav>
-    <ul>
-        <li><a href="registration.html">Log in/Sign up</a></li>
-        <li><a href="appointment.html">Make an Appointment</a></li>
-        <li><a href="analysis.html">Tests and Your Health</a></li>
-        <li><a href="personal_account.html">Personal Account</a></li>
-        <li><a href="diseases.html">About Diseases</a></li>
-        <li><a href="doctors.html">Doctors' Database</a></li>
-        <li><a href="recommend.html">General Recommendations</a></li>
-        <li><a href="funding.html">Financing</a></li>
+<nav class="bg-dark text-light py-2">
+    <ul class="nav justify-content-center">
+        <li class="nav-item">
+            <a class="nav-link text-light" href="registration.html">Log in/Sign up</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link text-light" href="appointment.html">Make an Appointment</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link text-light" href="analysis.html">Tests and Your Health</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link text-light" href="personal_account.html">Personal Account</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link text-light" href="diseases.html">About Diseases</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link text-light" href="doctors.html">Doctors' Database</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link text-light" href="recommend.html">General Recommendations</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link text-light" href="funding.html">Financing</a>
+        </li>
     </ul>
 </nav>
 
 <hr>
 
-<blockquote>“Take care of your body. It’s the only place you have to live.” – Jim Rohn </blockquote>
-<section>
-    <h2>About Us</h2>
-    <p>
-        Densauluq is a medical organization in Kazakhstan dedicated to providing high-quality healthcare
-        services to the people of our nation. Our mission is to ensure that every
-        individual has access to comprehensive, compassionate, and affordable healthcare.
-        We believe in the importance of preventative care, early diagnosis,
-        and effective treatment to improve the overall health and well-being of our community.
-    </p>
-</section>
+<div class="container">
+    <blockquote class="blockquote text-center my-4">
+        “Take care of your body. It’s the only place you have to live.” – Jim Rohn
+    </blockquote>
 
-<hr>
+    <section class="my-5">
+        <h2>About Us</h2>
+        <p>
+            Densauluq is a medical organization in Kazakhstan dedicated to providing high-quality healthcare
+            services to the people of our nation. Our mission is to ensure that every
+            individual has access to comprehensive, compassionate, and affordable healthcare.
+            We believe in the importance of preventative care, early diagnosis,
+            and effective treatment to improve the overall health and well-being of our community.
+        </p>
+    </section>
 
-<section>
-    <h2>Our Services</h2>
-    <ul>
-        <li>General Health Checkups</li>
-        <li>Pediatrics</li>
-        <li>Cardiology</li>
-        <li>Orthopedics</li>
-        <li>Emergency Care</li>
-        <li>Maternity Services</li>
-        <li>Laboratory Testing</li>
-        <li>Pharmacy Services</li>
-    </ul>
-</section>
+    <hr>
 
-<hr>
+    <section class="my-5">
+        <h2>Our Services</h2>
+        <ul>
+            <li>General Health Checkups</li>
+            <li>Pediatrics</li>
+            <li>Cardiology</li>
+            <li>Orthopedics</li>
+            <li>Emergency Care</li>
+            <li>Maternity Services</li>
+            <li>Laboratory Testing</li>
+            <li>Pharmacy Services</li>
+        </ul>
+    </section>
 
-<section>
-    <h2>Contact Us</h2>
-    <p><strong>Address:</strong> 123 Kabanbai Batyr st., Astana, Kazakhstan</p>
-    <p><strong>Phone:</strong> +7 (777) 123 1234</p>
-    <p><strong>Email:</strong> info@densauluq.kz</p>
-</section>
+    <hr>
 
-<footer>
+    <section class="my-5">
+        <h2>Contact Us</h2>
+        <p><strong>Address:</strong> 123 Kabanbai Batyr st., Astana, Kazakhstan</p>
+        <p><strong>Phone:</strong> +7 (777) 123 1234</p>
+        <p><strong>Email:</strong> info@densauluq.kz</p>
+    </section>
+</div>
+
+<footer class="bg-dark text-light text-center py-3 mt-auto">
     <p>2024 Densauluq. Gaziza Tanirbergen, Liana Smatulla, Kuanysh Aitzhanov.</p>
 </footer>
 
 <hr>
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d320668.45270979754!2d71.50158234999999!3d51.1043588!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x424585a605525605%3A0x4dff4a1973f7567e!2sAstana%20IT%20University!5e0!3m2!1sru!2skz!4v1725451090787!5m2!1sru!2skz" width="600" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
+<div class="container my-4">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d320668.45270979754!2d71.50158234999999!3d51.1043588!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x424585a605525605%3A0x4dff4a1973f7567e!2sAstana%20IT%20University!5e0!3m2!1sru!2skz!4v1725451090787!5m2!1sru!2skz" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+</div>
 </body>
 </html>
