--- a/recommend.html
+++ b/recommend.html
@@ -3,64 +3,79 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="Kuanysh_Aitzhanov_style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <!--  <link rel="stylesheet" href="Kuanysh_Aitzhanov_style.css">-->
 <!--  <link rel="stylesheet" href="Liana_style.css">-->
   <title>General Recommendations - Densauluq</title>
 </head>
-<body>
+<body class="bg-light">
 
-<header>
+<header class="bg-success text-center text-white py-4">
   <h1>General Recommendations</h1>
   <h2>Your Health Matters</h2>
   <p class="description">Follow these guidelines to maintain a healthy lifestyle.</p>
 </header>
 
-<nav>
-  <ul>
-    <li><a href="home_page.html">Return to home page</a></li>
-    <li><a href="registration.html">Log out</a></li>
-    <li><a href="appointment.html">Make an appointment</a></li>
-    <li><a href="analysis.html">View test results</a></li>
-    <li><a href="diseases.html">About diseases</a></li>
-    <li><a href="doctors.html">Doctors' database</a></li>
-    <li><a href="personal_account.html">Personal Account</a></li>
-    <li><a href="funding.html">Financing</a></li>
+<nav class="bg-dark text-light py-3">
+  <ul class="nav justify-content-center">
+    <li class="nav-item">
+      <a class="nav-link text-light" href="home_page.html">Return to home page</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link text-light" href="registration.html">Log out</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link text-light" href="appointment.html">Make an appointment</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link text-light" href="analysis.html">View test results</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link text-light" href="diseases.html">About diseases</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link text-light" href="doctors.html">Doctors' database</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link text-light" href="personal_account.html">Personal Account</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link text-light" href="funding.html">Financing</a>
+    </li>
   </ul>
 </nav>
 
-<section>
-  <h2>Healthy Eating</h2>
-  <p>Maintain a balanced diet rich in fruits, vegetables, whole grains, and lean proteins. Avoid excessive intake of sugars, salts, and unhealthy fats.</p>
-</section>
+<div class="container mt-5">
+  <section class="mb-4">
+    <h2 class="text-success">Healthy Eating</h2>
+    <p class="lead">Maintain a balanced diet rich in fruits, vegetables, whole grains, and lean proteins. Avoid excessive intake of sugars, salts, and unhealthy fats.</p>
+  </section>
 
-<section>
-  <h2>Regular Exercise</h2>
-  <p>Engage in regular physical activity for at least 30 minutes a day. This can include walking, running, cycling, swimming, or other activities you enjoy.</p>
-</section>
+  <section class="mb-4">
+    <h2 class="text-success">Regular Exercise</h2>
+    <p class="lead">Engage in regular physical activity for at least 30 minutes a day. This can include walking, running, cycling, swimming, or other activities you enjoy.</p>
+  </section>
 
-<section>
-  <h2>Mental Health</h2>
-  <p>Take care of your mental well-being by practicing mindfulness, getting enough sleep, and managing stress. Consider talking to a professional if needed.</p>
-</section>
+  <section class="mb-4">
+    <h2 class="text-success">Mental Health</h2>
+    <p class="lead">Take care of your mental well-being by practicing mindfulness, getting enough sleep, and managing stress. Consider talking to a professional if needed.</p>
+  </section>
 
-<section>
-  <h2>Avoid Harmful Substances</h2>
-  <p>Avoid smoking, excessive alcohol consumption, and recreational drug use. These can have serious long-term effects on your health.</p>
-</section>
+  <section class="mb-4">
+    <h2 class="text-success">Avoid Harmful Substances</h2>
+    <p class="lead">Avoid smoking, excessive alcohol consumption, and recreational drug use. These can have serious long-term effects on your health.</p>
+  </section>
 
-<section>
-  <h2>Regular Check-ups</h2>
-  <p>Schedule regular health check-ups with your doctor to catch any potential issues early. Early detection is key to effective treatment.</p>
-</section>
+  <section class="mb-4">
+    <h2 class="text-success">Regular Check-ups</h2>
+    <p class="lead">Schedule regular health check-ups with your doctor to catch any potential issues early. Early detection is key to effective treatment.</p>
+  </section>
 
-<section>
-  <h2>Stay Hydrated</h2>
-  <p>Drink plenty of water throughout the day. Staying hydrated is essential for overall health and helps maintain your energy levels.</p>
-</section>
-
-<footer>
-  <p>2024 Densauluq. Gaziza Tanirbergen, Liana Smatulla, Kuanysh Aitzhanov.</p>
-</footer>
+  <section class="mb-4">
+    <h2 class="text-success">Stay Hydrated</h2>
+    <p class="lead">Drink plenty of water throughout the day. Staying hydrated is essential for overall health and helps maintain your energy levels.</p>
+  </section>
+</div>
 
 </body>
 </html>
