--- a/home_page.html
+++ b/home_page.html
@@ -10,9 +10,10 @@
 </head>
 <body>
 
-<header class="text-center text-light py-3" style="background-color: #3a3a3a  ;">
+<header class="text-center text-light py-3" style="background-color: #19585a
+  ;">
     <img src="img/logo.png" alt="Densauluq Logo" style="height: 80px; width: auto;" class="img-fluid">
-    <img src="img/imgbgnew.png" alt="Densauluq Name" style="height: 60px; width: auto;" class="img-fluid">
+    <img src="img/imgb1.png" alt="Densauluq Name" style="height: 60px; width: auto;" class="img-fluid">
     <hr class="my-3">
     <h1>Medical Organization in Kazakhstan</h1>
     <p>Providing high-quality healthcare services for the people of Kazakhstan.</p>
