--- a/appointment.html
+++ b/appointment.html
@@ -39,6 +39,7 @@
             <br>
             <br>
         </section>
+        <div class="form-group">
         <h1>Choose the illness.</h1><br>
         <div class="custom-select">
             <select class="form-control form-control-lg">
@@ -49,28 +50,33 @@
                 <option>Heart disease</option>
             </select>
         </div>
+        </div>
         <br>
         <br>
-        <a>Choose the doctor.</a><br>
+        <div class="form-group">
+            <label>Choose the doctor.</label><br>
             <select class="form-control form-control-lg">
                 <option>Sembayev N.</option>
                 <option>Tanirbegren G.</option>
                 <option>Aitzhanov K.</option>
                 <option>Smatulla L.</option>
-            </select>
+            </select></div>
         <br>
         <br>
-        <a>Reason of the visit.</a><br>
-        <textarea></textarea><br>
+        <div class="form-group">
+            <label>Reason of the visit.</label><br>
+            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea><br>
+            <br>
+        </div>
         <br>
-        <br>
-        <a>Choose the date.</a><br>
+        <label>Choose the date.</label><br>
         <input type="date"><br>
         <br>
         <br>
-        <a>Choose the time.</a><br>
-        <input type="time"><br>
-        <br>
+        <div class="form-group">
+            <a>Choose the time.</a><br>
+            <input type="time"><br>
+        </div>
         <br>
         <input type="submit" value="Register" class=pulsate>
         <br>
