--- a/analysis.html
+++ b/analysis.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="GazizaDesign.css">
     <link rel="stylesheet" href="Kuanysh_Aitzhanov_style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="./css/bootstrap-datetimepicker.min.css" type="text/css" media="all">
     <title>Health analysis - Densauluq</title>
 </head>
 <body>
@@ -14,38 +15,51 @@
     <h3>Choose from list please</h3>
     <p>Manage your personal information, appointments, and more.</p>
 </header>
-<nav class="navbar navbar-expand-lg">
-    <ul class="navbar-nav">
-        <li class="nav-item"><a href="home_page.html">Return to home page</a></li>
-        <li class="nav-item"><a href="registration.html">Log out</a></li>
-        <li class="nav-item"><a href="appointment.html">Make an appointment</a></li>
-        <li class="nav-item"><a href="personal_account.html">Personal Account</a></li>
-        <li class="nav-item"><a href="diseases.html">About diseases</a></li>
-        <li class="nav-item"><a href="doctors.html">Doctors' database</a></li>
-        <li class="nav-item"><a href="recommend.html">General recommendations</a></li>
-        <li class="nav-item"><a href="funding.html">Financing</a></li>
-    </ul>
-</nav>
+<div class="flex-column">
+    <nav class="navbar navbar-expand-lg">
+        <ul class="navbar-nav">
+            <li class="nav-item"><a href="home_page.html">Return to home page</a></li>
+            <li class="nav-item"><a href="registration.html">Log out</a></li>
+            <li class="nav-item"><a href="appointment.html">Make an appointment</a></li>
+            <li class="nav-item"><a href="personal_account.html">Personal Account</a></li>
+            <li class="nav-item"><a href="diseases.html">About diseases</a></li>
+            <li class="nav-item"><a href="doctors.html">Doctors' database</a></li>
+            <li class="nav-item"><a href="recommend.html">General recommendations</a></li>
+            <li class="nav-item"><a href="funding.html">Financing</a></li>
+        </ul>
+    </nav>
+</div>
+
 <div class="registration">
-<details>
-    <summary>Most recent analysis</summary>
-    Macronutrient Balance:
-        Protein: 15% of total calorie intake (around 105 g/day).
-        Carbohydrates: 55% (around 385 g/day).
-        Fats: 30% (around 93 g/day).
-        Micronutrients: Adequate intake of calcium (important for bone health) and iron (for energy). Normal levels of vitamins
-        D and B12, both essential for overall well-being.
+    <div class="align-items-center">
+        <details>
+            <summary>Most recent analysis</summary>
+            Macronutrient Balance:
+            Protein: 15% of total calorie intake (around 105 g/day).
+            Carbohydrates: 55% (around 385 g/day).
+            Fats: 30% (around 93 g/day).
+            Micronutrients: Adequate intake of calcium (important for bone health) and iron (for energy). Normal levels of vitamins
+            D and B12, both essential for overall well-being.
 
-        Conclusion:
-        This 19-year-old boy is in good health. His physical, mental, and emotional indicators are within normal ranges, and he
-        leads an active lifestyle with healthy habits. It is recommended that he continue maintaining a balanced diet, staying
-        physically active, and focusing on preventive health measures.
-</details>
+            Conclusion:
+            This 19-year-old boy is in good health. His physical, mental, and emotional indicators are within normal ranges, and he
+            leads an active lifestyle with healthy habits. It is recommended that he continue maintaining a balanced diet, staying
+            physically active, and focusing on preventive health measures.
+        </details>
 
-<br>
-<br>
-<a>Choose the date of visiting.</a><br>
-<input type="date"><br>
+        <br>
+        <br>
+        <a>Choose the date of visiting.</a><br>
+        <div class="input-group date" id="id_4">
+            <input type="text" value="05/16/2018" class="form-control" required/>
+            <div class="input-group-addon input-group-append">
+                <div class="input-group-text">
+                    <i class="glyphicon glyphicon-calendar fa fa-calendar"></i>
+                </div>
+            </div>
+        </div>
+        <br>
+    </div>
 </div>
 <br>
 <br>
@@ -77,7 +91,7 @@
                 </tbody>
             </table>
 </section>
-<footer>
+<footer class="align-items-end">
     <p>2024 Densauluq. Gaziza Tanirbergen, Liana Smatulla, Kuanysh Aitzhanov.</p>
 </footer>
 </body>
