--- a/diseases.html
+++ b/diseases.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initialscale=1.0">
     <link rel="stylesheet" href="Kuanysh_Aitzhanov_style.css">
-    <link rel="stylesheet" href="Liana_style.css">
+<!--    <link rel="stylesheet" href="Liana_style.css">-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initialscale=1.0">
     <title>Densauluq</title>
 </head>
@@ -62,7 +63,7 @@
 
 <section>
     <article>
-        <h3 Monkeypox</h3>
+        <h3> Monkeypox </h3>
 
         <figure>
             <img src="img/monkeypox.jpg" alt="Monkeypox Virus" width="250" height="250">
