--- a/doctors.html
+++ b/doctors.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initialscale=1.0">
-    <link rel="stylesheet" href="Kuanysh_Aitzhanov_style.css">
-    <link rel="stylesheet" href="Liana_style.css">
+<!--    <link rel="stylesheet" href="Kuanysh_Aitzhanov_style.css">-->
+<!--    <link rel="stylesheet" href="Liana_style.css">-->
     <meta name="viewport" content="width=device-width, initialscale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <title>Densauluq</title>
 </head>
 
