--- a/home_page.html
+++ b/home_page.html
@@ -10,8 +10,7 @@
 </head>
 <body>
 
-<header class="text-center text-light py-3" style="background-color: #19585a
-  ;">
+<header class="text-center text-light py-3" style="background-color: #19585a;">
     <img src="img/logo.png" alt="Densauluq Logo" style="height: 80px; width: auto;" class="img-fluid">
     <img src="img/imgb1.png" alt="Densauluq Name" style="height: 60px; width: auto;" class="img-fluid">
     <hr class="my-3">
