--- a/recommend.html
+++ b/recommend.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <!--  <link rel="stylesheet" href="Kuanysh_Aitzhanov_style.css">-->
+  <link rel="stylesheet" href="Kuanysh_Aitzhanov_style.css">
 <!--  <link rel="stylesheet" href="Liana_style.css">-->
   <title>General Recommendations - Densauluq</title>
 </head>
 <body class="bg-light">
 
-<header class="bg-success text-center text-white py-4">
+<header class="text-center text-light py-3" style="background-color: #19585a;">
   <h1>General Recommendations</h1>
   <h2>Your Health Matters</h2>
   <p class="description">Follow these guidelines to maintain a healthy lifestyle.</p>
@@ -47,32 +47,32 @@
 
 <div class="container mt-5">
   <section class="mb-4">
-    <h2 class="text-success">Healthy Eating</h2>
+    <h2 style="color: #19585a;">Healthy Eating</h2>
     <p class="lead">Maintain a balanced diet rich in fruits, vegetables, whole grains, and lean proteins. Avoid excessive intake of sugars, salts, and unhealthy fats.</p>
   </section>
 
   <section class="mb-4">
-    <h2 class="text-success">Regular Exercise</h2>
+    <h2 style="color: #19585a;">Regular Exercise</h2>
     <p class="lead">Engage in regular physical activity for at least 30 minutes a day. This can include walking, running, cycling, swimming, or other activities you enjoy.</p>
   </section>
 
   <section class="mb-4">
-    <h2 class="text-success">Mental Health</h2>
+    <h2 style="color: #19585a;">Mental Health</h2>
     <p class="lead">Take care of your mental well-being by practicing mindfulness, getting enough sleep, and managing stress. Consider talking to a professional if needed.</p>
   </section>
 
   <section class="mb-4">
-    <h2 class="text-success">Avoid Harmful Substances</h2>
+    <h2 style="color: #19585a;">Avoid Harmful Substances</h2>
     <p class="lead">Avoid smoking, excessive alcohol consumption, and recreational drug use. These can have serious long-term effects on your health.</p>
   </section>
 
   <section class="mb-4">
-    <h2 class="text-success">Regular Check-ups</h2>
+    <<h2 style="color: #19585a;">Regular Check-ups</h2>
     <p class="lead">Schedule regular health check-ups with your doctor to catch any potential issues early. Early detection is key to effective treatment.</p>
   </section>
 
   <section class="mb-4">
-    <h2 class="text-success">Stay Hydrated</h2>
+    <h2 style="color: #19585a;">Stay Hydrated</h2>
     <p class="lead">Drink plenty of water throughout the day. Staying hydrated is essential for overall health and helps maintain your energy levels.</p>
   </section>
 </div>
