--- a/personal_account.html
+++ b/personal_account.html
@@ -3,67 +3,98 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initialscale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="Kuanysh_Aitzhanov_style.css">
   <title>Personal Account - Densauluq</title>
 </head>
 <body>
 
-<header>
+<header class="text-center text-light py-4" style="background-color: #19585a;">
   <h1>Personal Account</h1>
   <h2>Welcome, Kuanysh</h2>
   <p class="description">Manage your personal information, appointments, and more.</p>
 </header>
 
-<nav>
-  <ul>
-    <li><a href="home_page.html">Return to home page</a></li>
-    <li><a href="registration.html">Log out</a></li>
-    <li><a href="appointment.html">Make an appointment</a></li>
-    <li><a href="analysis.html">View test results</a></li>
-    <li><a href="diseases.html">About diseases</a></li>
-    <li><a href="doctors.html">Doctors' database</a></li>
-    <li><a href="recommend.html">General recommendations</a></li>
-    <li><a href="funding.html">Financing</a></li>
+<nav class="bg-dark text-light">
+  <ul class="nav justify-content-center py-2">
+    <li class="nav-item">
+      <a class="nav-link text-light" href="home_page.html">Return to home page</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link text-light" href="registration.html">Log out</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link text-light" href="appointment.html">Make an appointment</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link text-light" href="analysis.html">View test results</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link text-light" href="diseases.html">About diseases</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link text-light" href="doctors.html">Doctors' database</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link text-light" href="recommend.html">General recommendations</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link text-light" href="funding.html">Financing</a>
+    </li>
   </ul>
 </nav>
 
-<section>
-  <h2>Your Information</h2>
-  <div class="your-information">
-    <p><strong>Name:</strong>Kuanysh</p>
-    <p><strong>Surname:</strong>Aitzhanov</p>
-    <p><strong>IIN:</strong>22222222222222</p>
-    <p><strong>Gender:</strong>Male</p>
-    <p><strong>Place of Residence:</strong>Pushkin st. 12</p>
-    <p><strong>Hospital Registration:</strong>Mediker</p>
-    <p><strong>Date of Birth:</strong> 22.12.2005</p>
-    <p><strong>Email:</strong> kuka@gmail.com</p>
-    <p><strong>Phone:</strong> +7 (777) 789 7890</p>
+<<div class="container my-4">
+  <section>
+    <h2>Your Information</h2>
+    <div class="row mb-3">
+      <div class="col-md-6">
+        <div class="card p-3 shadow">
+          <p><strong>Name:</strong> Kuanysh</p>
+          <p><strong>Surname:</strong> Aitzhanov</p>
+          <p><strong>IIN:</strong> 22222222222222</p>
+          <p><strong>Gender:</strong> Male</p>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="card p-3 shadow">
+          <p><strong>Place of Residence:</strong> Pushkin st. 12</p>
+          <p><strong>Hospital Registration:</strong> Mediker</p>
+          <p><strong>Date of Birth:</strong> 22.12.2005</p>
+          <p><strong>Email:</strong> kuka@gmail.com</p>
+          <p><strong>Phone:</strong> +7 (777) 789 7890</p>
+        </div>
+      </div>
+    </div>
+  </section>
+</div>
+
+
+<section class="mt-4 ms-3">
+  <h2>Your Appointments</h2>
+  <div class="card p-3 shadow">
+    <p>No upcoming appointments.</p>
+    <p><a href="appointment.html">Schedule a new appointment</a></p>
   </div>
 </section>
 
-<section>
-  <h2>Your Appointments</h2>
-  <p>No upcoming appointments.</p>
-  <p><a href="appointment.html">Schedule a new appointment</a></p>
-</section>
-
-<section>
+<section class="mt-4 ms-3">
   <h2>Your Test Results</h2>
-  <p>No test results available.</p>
-  <p><a href="analysis.html">View more details</a></p>
+  <div class="card p-3 shadow">
+    <p>No test results available.</p>
+    <p><a href="analysis.html">View more details</a></p>
+  </div>
 </section>
 
-<section>
+<section class="mt-4 ms-3 mb-4">
   <h2>Contact Your Doctor</h2>
-  <p><strong>Doctor's Name:</strong> Dr. Aibolit</p>
-  <p><strong>Email:</strong> doctor@gmail.com</p>
-  <p><strong>Phone:</strong> +7 (777) 456 4567</p>
+  <div class="card p-3 shadow">
+    <p><strong>Doctor's Name:</strong> Dr. Aibolit</p>
+    <p><strong>Email:</strong> doctor@gmail.com</p>
+    <p><strong>Phone:</strong> +7 (777) 456 4567</p>
+  </div>
 </section>
 
-<footer>
-  <p>2024 Densauluq. Gaziza Tanirbergen, Liana Smatulla, Kuanysh Aitzhanov.</p>
-</footer>
 
 </body>
 
