--- a/personal_account.html
+++ b/personal_account.html
@@ -70,28 +70,34 @@
 </div>
 
 
-<section class="mt-4 ms-3">
-  <h2>Your Appointments</h2>
-  <div class="card p-3 shadow">
-    <p>No upcoming appointments.</p>
-    <p><a href="appointment.html">Schedule a new appointment</a></p>
+<section class="mt-4 ms-3 me-3 mb-4">
+  <div class="card shadow">
+    <div class="card-body">
+      <h2>Your Appointments</h2>
+      <p>No upcoming appointments.</p>
+      <p><a href="appointment.html">Schedule a new appointment</a></p>
+    </div>
   </div>
 </section>
 
-<section class="mt-4 ms-3">
-  <h2>Your Test Results</h2>
-  <div class="card p-3 shadow">
-    <p>No test results available.</p>
-    <p><a href="analysis.html">View more details</a></p>
+<section class="mt-4 ms-3 me-3 mb-4">
+  <div class="card shadow">
+    <div class="card-body">
+      <h2>Your Test Results</h2>
+      <p>No test results available.</p>
+      <p><a href="analysis.html">View more details</a></p>
+    </div>
   </div>
 </section>
 
-<section class="mt-4 ms-3 mb-4">
-  <h2>Contact Your Doctor</h2>
-  <div class="card p-3 shadow">
-    <p><strong>Doctor's Name:</strong> Dr. Aibolit</p>
-    <p><strong>Email:</strong> doctor@gmail.com</p>
-    <p><strong>Phone:</strong> +7 (777) 456 4567</p>
+<section class="mt-4 ms-3 me-3 mb-4">
+  <div class="card shadow">
+    <div class="card-body">
+      <h2>Contact Your Doctor</h2>
+      <p><strong>Doctor's Name:</strong> Dr. Aibolit</p>
+      <p><strong>Email:</strong> doctor@gmail.com</p>
+      <p><strong>Phone:</strong> +7 (777) 456 4567</p>
+    </div>
   </div>
 </section>
 
