--- a/recommend.html
+++ b/recommend.html
@@ -45,35 +45,47 @@
   </ul>
 </nav>
 
-<div class="container mt-5">
-  <section class="mb-4">
-    <h2 style="color: #19585a;">Healthy Eating</h2>
-    <p class="lead">Maintain a balanced diet rich in fruits, vegetables, whole grains, and lean proteins. Avoid excessive intake of sugars, salts, and unhealthy fats.</p>
+<div class="container">
+  <section class="mb-4 mt-3">
+    <div class="card p-3 shadow">
+      <h2>Healthy Eating</h2>
+      <p class="lead">Maintain a balanced diet rich in fruits, vegetables, whole grains, and lean proteins. Avoid excessive intake of sugars, salts, and unhealthy fats.</p>
+    </div>
   </section>
 
   <section class="mb-4">
-    <h2 style="color: #19585a;">Regular Exercise</h2>
-    <p class="lead">Engage in regular physical activity for at least 30 minutes a day. This can include walking, running, cycling, swimming, or other activities you enjoy.</p>
+    <div class="card p-3 shadow">
+      <h2>Regular Exercise</h2>
+      <p class="lead">Engage in regular physical activity for at least 30 minutes a day. This can include walking, running, cycling, swimming, or other activities you enjoy.</p>
+    </div>
   </section>
 
   <section class="mb-4">
-    <h2 style="color: #19585a;">Mental Health</h2>
-    <p class="lead">Take care of your mental well-being by practicing mindfulness, getting enough sleep, and managing stress. Consider talking to a professional if needed.</p>
+    <div class="card p-3 shadow">
+      <h2>Mental Health</h2>
+      <p class="lead">Take care of your mental well-being by practicing mindfulness, getting enough sleep, and managing stress. Consider talking to a professional if needed.</p>
+    </div>
   </section>
 
   <section class="mb-4">
-    <h2 style="color: #19585a;">Avoid Harmful Substances</h2>
-    <p class="lead">Avoid smoking, excessive alcohol consumption, and recreational drug use. These can have serious long-term effects on your health.</p>
+    <div class="card p-3 shadow">
+      <h2>Avoid Harmful Substances</h2>
+      <p class="lead">Avoid smoking, excessive alcohol consumption, and recreational drug use. These can have serious long-term effects on your health.</p>
+    </div>
   </section>
 
   <section class="mb-4">
-    <<h2 style="color: #19585a;">Regular Check-ups</h2>
-    <p class="lead">Schedule regular health check-ups with your doctor to catch any potential issues early. Early detection is key to effective treatment.</p>
+    <div class="card p-3 shadow">
+      <h2>Regular Check-ups</h2>
+      <p class="lead">Schedule regular health check-ups with your doctor to catch any potential issues early. Early detection is key to effective treatment.</p>
+    </div>
   </section>
 
   <section class="mb-4">
-    <h2 style="color: #19585a;">Stay Hydrated</h2>
-    <p class="lead">Drink plenty of water throughout the day. Staying hydrated is essential for overall health and helps maintain your energy levels.</p>
+    <div class="card p-3 shadow">
+      <h2>Stay Hydrated</h2>
+      <p class="lead">Drink plenty of water throughout the day. Staying hydrated is essential for overall health and helps maintain your energy levels.</p>
+    </div>
   </section>
 </div>
 
