--- a/home_page.html
+++ b/home_page.html
@@ -99,7 +99,7 @@
 
 <hr>
 
-<div class="container my-4">
+<div class="container my-4 shadow">
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d320668.45270979754!2d71.50158234999999!3d51.1043588!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x424585a605525605%3A0x4dff4a1973f7567e!2sAstana%20IT%20University!5e0!3m2!1sru!2skz!4v1725451090787!5m2!1sru!2skz" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </div>
 </body>
