--- a/appointment.html
+++ b/appointment.html
@@ -9,23 +9,23 @@
     <title>Appointment - Densaulyq</title>
 </head>
 <body>
-<header>
+<header class="text-center text-light py-3" style="background-color: #19585a;">
     <h1>Appointments</h1>
     <h3>Choose from list please</h3>
     <p>You can choose any centers, any specialists and even any time.</p>
 </header>
 
-<nav class="navbar navbar-expand-lg">
-            <ul class="navbar-nav">
-                    <li class="nav-item"><a href="home_page.html">Return to home page</a></li>
-                    <li class="nav-item"><a href="registration.html">Log out</a></li>
-                    <li class="nav-item"><a href="personal_account.html">Personal Account</a></li>
-                    <li class="nav-item"><a href="analysis.html">View test results</a></li>
-                    <li class="nav-item"><a href="diseases.html">About diseases</a></li>
-                    <li class="nav-item"><a href="doctors.html">Doctors' database</a></li>
-                    <li class="nav-item"><a href="recommend.html">General recommendations</a></li>
-                    <li class="nav-item"><a href="funding.html">Financing</a></li>
-            </ul>
+<nav class="bg-dark text-light py-2">
+    <ul class="nav justify-content-center">
+        <li class="nav-item"><a class="nav-link text-light" href="home_page.html">Return to home page</a></li>
+        <li class="nav-item"><a class="nav-link text-light" href="registration.html">Log out</a></li>
+        <li class="nav-item"><a class="nav-link text-light" href="personal_account.html">Personal Account</a></li>
+        <li class="nav-item"><a class="nav-link text-light" href="analysis.html">View test results</a></li>
+        <li class="nav-item"><a class="nav-link text-light" href="diseases.html">About diseases</a></li>
+        <li class="nav-item"><a class="nav-link text-light" href="doctors.html">Doctors' database</a></li>
+        <li class="nav-item"><a class="nav-link text-light" href="recommend.html">General recommendations</a></li>
+        <li class="nav-item"><a class="nav-link text-light" href="funding.html">Financing</a></li>
+    </ul>
 </nav>
 <br>
 <br>
