--- a/registration.html
+++ b/registration.html
@@ -9,19 +9,19 @@
     <title>Log in/Sign in - Densauluq</title>
 </head>
 <body>
-<header>
+<header class="text-center text-light py-3" style="background-color: #19585a;">
     <h1>Account on Densaulyq?</h1>
 </header>
-<nav class="navbar navbar-expand-lg">
-    <ul class="navbar-nav">
-        <li class="nav-item"><a href="home_page.html">Main</a></li>
-        <li class="nav-item"><a href="appointment.html">Make an Appointment</a></li>
-        <li class="nav-item"><a href="analysis.html">Tests and Your Health</a></li>
-        <li class="nav-item"><a href="personal_account.html">Personal Account</a></li>
-        <li class="nav-item"><a href="diseases.html">About Diseases</a></li>
-        <li class="nav-item"><a href="doctors.html">Doctors' Database</a></li>
-        <li class="nav-item"><a href="recommend.html">General Recommendations</a></li>
-        <li class="nav-item"><a href="funding.html">Financing</a></li>
+<nav class="bg-dark text-light py-2">
+    <ul class="nav justify-content-center">
+        <li class="nav-item"><a class="nav-link text-light" href="home_page.html">Main</a></li>
+        <li class="nav-item"><a class="nav-link text-light" href="appointment.html">Make an Appointment</a></li>
+        <li class="nav-item"><a class="nav-link text-light" href="analysis.html">Tests and Your Health</a></li>
+        <li class="nav-item"><a class="nav-link text-light" href="personal_account.html">Personal Account</a></li>
+        <li class="nav-item"><a class="nav-link text-light" href="diseases.html">About Diseases</a></li>
+        <li class="nav-item"><a class="nav-link text-light" href="doctors.html">Doctors' Database</a></li>
+        <li class="nav-item"><a class="nav-link text-light" href="recommend.html">General Recommendations</a></li>
+        <li class="nav-item"><a class="nav-link text-light" href="funding.html">Financing</a></li>
     </ul>
 </nav>
 <br>
