--- a/analysis.html
+++ b/analysis.html
@@ -5,19 +5,19 @@
     <meta name="viewport" content="width=device-width, initialscale=1.0">
     <link rel="stylesheet" href="GazizaDesign.css">
     <link rel="stylesheet" href="Kuanysh_Aitzhanov_style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="./css/bootstrap-datetimepicker.min.css" type="text/css" media="all">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <title>Health analysis - Densauluq</title>
 </head>
 <body>
 <header class="text-center text-light py-3" style="background-color: #19585a;">
-    <h1>Health analysis</h1>
-    <h3>Choose from list please</h3>
+    <h1 class="text-light">Health analysis</h1>
+    <h3 class="text-light">Choose from list please</h3>
     <p>Manage your personal information, appointments, and more.</p>
 </header>
 
 <nav class="bg-dark text-light py-2">
-    <ul class="navbar-nav">
+    <ul class="nav justify-content-center">
         <li class="nav-item"><a class="nav-link text-light" href="home_page.html">Return to home page</a></li>
         <li class="nav-item"><a class="nav-link text-light" href="registration.html">Log out</a></li>
         <li class="nav-item"><a class="nav-link text-light" href="appointment.html">Make an appointment</a></li>
@@ -29,68 +29,62 @@
     </ul>
 </nav>
 
-<div class="registration">
+<div class="registration mb-5">
     <div class="align-items-center">
-        <details>
-            <summary>Most recent analysis</summary>
-            Macronutrient Balance:
-            Protein: 15% of total calorie intake (around 105 g/day).
-            Carbohydrates: 55% (around 385 g/day).
-            Fats: 30% (around 93 g/day).
-            Micronutrients: Adequate intake of calcium (important for bone health) and iron (for energy). Normal levels of vitamins
-            D and B12, both essential for overall well-being.
-
-            Conclusion:
-            This 19-year-old boy is in good health. His physical, mental, and emotional indicators are within normal ranges, and he
-            leads an active lifestyle with healthy habits. It is recommended that he continue maintaining a balanced diet, staying
-            physically active, and focusing on preventive health measures.
+        <details class="mb-4">
+            <summary class="h5">Most Recent Analysis</summary>
+            <p class="mt-3">
+                <strong>Macronutrient Balance:</strong><br>
+                Protein: 15% of total calorie intake (around 105 g/day).<br>
+                Carbohydrates: 55% (around 385 g/day).<br>
+                Fats: 30% (around 93 g/day).<br><br>
+                <strong>Micronutrients:</strong><br>
+                Adequate intake of calcium (important for bone health) and iron (for energy). Normal levels of vitamins D and B12, both essential for overall well-being.
+            </p>
+            <p class="mt-3">
+                <strong>Conclusion:</strong><br>
+                This 19-year-old boy is in good health. His physical, mental, and emotional indicators are within normal ranges, and he leads an active lifestyle with healthy habits. It is recommended that he continue maintaining a balanced diet, staying physically active, and focusing on preventive health measures.
+            </p>
         </details>
 
-        <br>
-        <br>
-        <a>Choose the date of visiting.</a><br>
-        <div class="input-group date" id="id_4">
-            <input type="text" value="05/16/2018" class="form-control" required/>
-            <div class="input-group-addon input-group-append">
-                <div class="input-group-text">
-                    <i class="glyphicon glyphicon-calendar fa fa-calendar"></i>
-                </div>
-            </div>
+        <label for="visit-date" class="form-label">Choose the date of visiting</label>
+        <div class="input-group date mb-4" id="id_4">
+            <input type="date" id="visit-date" class="form-control">
         </div>
-        <br>
     </div>
 </div>
-<br>
-<br>
+
 <section class="analysis">
-            <table id="table-design">
-                <thead id="thead-design-analysis">
-                <tr>
-                    <th>Date</th>
-                    <th>Analysis name</th>
-                    <th>Results</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr>
-                    <td>11.09.2001</td>
-                    <td>Traumatology</td>
-                    <td>Broken hand</td>
-                </tr>
-                <tr>
-                    <td>12.06.2020</td>
-                    <td>Coronavirus test</td>
-                    <td>positive</td>
-                </tr>
-                <tr>
-                    <td>05.07.2024</td>
-                    <td>Monkeypox test</td>
-                    <td>positive</td>
-                </tr>
-                </tbody>
-            </table>
+    <table class="table table-striped table-hover" id="table-design">
+        <thead class="table-dark" id="thead-design-analysis">
+        <tr>
+            <th>Date</th>
+            <th>Analysis Name</th>
+            <th>Results</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td>11.09.2001</td>
+            <td>Traumatology</td>
+            <td>Broken hand</td>
+        </tr>
+        <tr>
+            <td>12.06.2020</td>
+            <td>Coronavirus test</td>
+            <td>Positive</td>
+        </tr>
+        <tr>
+            <td>05.07.2024</td>
+            <td>Monkeypox test</td>
+            <td>Positive</td>
+        </tr>
+        </tbody>
+    </table>
 </section>
-<footer class="align-items-end">
+<br>
+<br>
+<footer class="bg-dark text-light text-center py-3 mt-auto">
     <p>2024 Densauluq. Gaziza Tanirbergen, Liana Smatulla, Kuanysh Aitzhanov.</p>
 </footer>
 </body>
