--- a/appointment.html
+++ b/appointment.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initialscale=1.0">
     <link rel="stylesheet" href="Kuanysh_Aitzhanov_style.css">
     <link rel="stylesheet" href="GazizaDesign.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <title>Appointment - Densaulyq</title>
 </head>
 <body>
 <header class="text-center text-light py-3" style="background-color: #19585a;">
-    <h1>Appointments</h1>
-    <h3>Choose from list please</h3>
+    <h1 class="text-light">Appointments</h1>
+    <h3 class="text-light">Choose from list please</h3>
     <p>You can choose any centers, any specialists and even any time.</p>
 </header>
 
@@ -34,59 +35,53 @@
         <section>
             <img src="img/covid.png" alt="Коронавирус" height="200px" width="200px"><br>
             <figcaption>Illustration by Tanirbergen Gaziza</figcaption><br>
-            <br>
-            <h3>Discounts for coronavirus diagnostics.</h3><br>
-            <br>
-            <br>
+            <h3 class="text-dark">Discounts for coronavirus diagnostics.</h3>
         </section>
         <div class="form-group">
-        <h1>Choose the illness.</h1><br>
-        <div class="custom-select">
-            <select class="form-control form-control-lg">
-                <option>Coronavirus</option>
-                <option>Monkeypox</option>
-                <option>SARS</option>
-                <option>Fever</option>
-                <option>Heart disease</option>
-            </select>
+            <h1 class="text-dark">Choose the illness.</h1>
+            <div>
+                <select class="form-control form-control-lg">
+                    <option>Coronavirus</option>
+                    <option>Monkeypox</option>
+                    <option>SARS</option>
+                    <option>Fever</option>
+                    <option>Heart disease</option>
+                </select>
+            </div>
         </div>
-        </div>
-        <br>
-        <br>
+
         <div class="form-group">
-            <label>Choose the doctor.</label><br>
-            <select class="form-control form-control-lg">
+            <label for="doctor">Choose the doctor:</label>
+            <select id="doctor" class="form-control form-control-lg">
                 <option>Sembayev N.</option>
                 <option>Tanirbegren G.</option>
                 <option>Aitzhanov K.</option>
                 <option>Smatulla L.</option>
-            </select></div>
-        <br>
-        <br>
-        <div class="form-group">
-            <label>Reason of the visit.</label><br>
-            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea><br>
-            <br>
+            </select>
         </div>
-        <br>
-        <label>Choose the date.</label><br>
-        <input type="date"><br>
-        <br>
-        <br>
+
         <div class="form-group">
-            <a>Choose the time.</a><br>
-            <input type="time"><br>
+            <label for="reason">Reason of the visit:</label>
+            <textarea class="form-control" id="reason" rows="3" placeholder="Describe the reason"></textarea>
         </div>
-        <br>
-        <input type="submit" value="Register" class=pulsate>
-        <br>
-        <br>
+
+        <div class="form-group">
+            <label for="visit-date">Choose the date:</label>
+            <input type="date" id="visit-date" class="form-control">
+        </div>
+
+        <div class="form-group">
+            <label for="visit-time">Choose the time:</label>
+            <input type="time" id="visit-time" class="form-control">
+        </div>
+
+        <input type="submit" value="Register" class="bg-dark btn btn-primary w-100 btn-lg">
     </form>
 </fieldset>
 <br>
 <br>
 <br>
-<footer>
+<footer class="bg-dark text-light text-center py-3 mt-auto">
     <p>2024 Densauluq. Gaziza Tanirbergen, Liana Smatulla, Kuanysh Aitzhanov.</p>
 </footer>
 </body>
