--- a/personal_account.html
+++ b/personal_account.html
@@ -75,7 +75,7 @@
     <div class="card-body">
       <h2>Your Appointments</h2>
       <p>No upcoming appointments.</p>
-      <p><a href="appointment.html">Schedule a new appointment</a></p>
+      <p><a href="appointment.html" class="btn btn-primary">Schedule a new appointment</a></p>
     </div>
   </div>
 </section>
@@ -85,7 +85,7 @@
     <div class="card-body">
       <h2>Your Test Results</h2>
       <p>No test results available.</p>
-      <p><a href="analysis.html">View more details</a></p>
+      <p><a href="analysis.html" class="btn btn-primary">View more details</a></p>
     </div>
   </div>
 </section>
