--- a/diseases.html
+++ b/diseases.html
@@ -1,210 +1,3 @@
-<!--<!DOCTYPE html>-->
-<!--<html lang="en" xmlns="http://www.w3.org/1999/html">-->
-<!--<head>-->
-<!--    <meta charset="UTF-8">-->
-<!--    <meta name="viewport" content="width=device-width, initialscale=1.0">-->
-<!--    <link rel="stylesheet" href="Kuanysh_Aitzhanov_style.css">-->
-<!--    <link rel="stylesheet" href="Liana_style.css">-->
-<!--    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">-->
-<!--    <meta name="viewport" content="width=device-width, initialscale=1.0">-->
-<!--    <title>Densauluq</title>-->
-<!--</head>-->
-
-<!--<body>-->
-<!--<header>-->
-<!--    <h1>About Diseases</h1>-->
-<!--    <p>On this page you can read about common diseases and learn their symptoms.</p>-->
-
-
-
-<!--  </header>-->
-
-<!--<nav class="bg-dark text-light py-2">-->
-<!--    <ul class="nav justify-content-center">-->
-<!--        <li class="nav-item">-->
-<!--            <a class="nav-link text-light" href="registration.html">Log in/Sign up</a>-->
-<!--        </li>-->
-<!--        <li class="nav-item">-->
-<!--            <a class="nav-link text-light" href="appointment.html">Make an Appointment</a>-->
-<!--        </li>-->
-<!--        <li class="nav-item">-->
-<!--            <a class="nav-link text-light" href="analysis.html">Tests and Your Health</a>-->
-<!--        </li>-->
-<!--        <li class="nav-item">-->
-<!--            <a class="nav-link text-light" href="personal_account.html">Personal Account</a>-->
-<!--        </li>-->
-<!--        <li class="nav-item">-->
-<!--            <a class="nav-link text-light" href="diseases.html">About Diseases</a>-->
-<!--        </li>-->
-<!--        <li class="nav-item">-->
-<!--            <a class="nav-link text-light" href="doctors.html">Doctors' Database</a>-->
-<!--        </li>-->
-<!--        <li class="nav-item">-->
-<!--            <a class="nav-link text-light" href="recommend.html">General Recommendations</a>-->
-<!--        </li>-->
-<!--        <li class="nav-item">-->
-<!--            <a class="nav-link text-light" href="funding.html">Financing</a>-->
-<!--        </li>-->
-<!--    </ul>-->
-<!--</nav>-->
-
-<!--  <section>-->
-
-<!--      <article >-->
-<!--          <h3>Severe Acute Respiratory Syndrome (SARS)</h3>-->
-
-<!--          <figure>-->
-<!--              <img src="img/sars%20virus.jpg" alt="SARS Virus" width="250" height="250">-->
-<!--              <figcaption>SARS virus under the microscope</figcaption>-->
-<!--          </figure>-->
-
-<!--          <p >-->
-<!--              SARS (Severe Acute Respiratory Syndrome) is a viral respiratory illness caused by the SARS-associated coronavirus (SARS-CoV). It was first identified in 2002 in southern China and led to a global outbreak in 2003. SARS primarily spreads through respiratory droplets when an infected person coughs or sneezes.-->
-<!--          </p>-->
-
-<!--          <p>Symptoms of SARS include:</p>-->
-<!--          <ul class="list-group">-->
-<!--              <li class="list-group-item list-group-item-warning">High fever (above 38°C)</li>-->
-<!--              <li class="list-group-item list-group-item-warning">Chills and body aches</li>-->
-<!--              <li class="list-group-item list-group-item-warning">Dry cough</li>-->
-<!--              <li class="list-group-item list-group-item-warning">Shortness of breath or difficulty breathing</li>-->
-<!--              <li class="list-group-item list-group-item-warning" >Fatigue</li>-->
-<!--              <li class="list-group-item list-group-item-warning">Diarrhea (in some cases)</li>-->
-<!--          </ul>-->
-
-<!--          <p>-->
-<!--              In severe cases, SARS can progress to pneumonia, which can be life-threatening. The outbreak was contained by 2004.-->
-<!--          </p>-->
-<!--      </article>-->
-<!--  </section>-->
-
-<!--<section>-->
-<!--    <article>-->
-<!--        <h3> Monkeypox </h3>-->
-
-<!--        <figure>-->
-<!--            <img src="img/monkeypox.jpg" alt="Monkeypox Virus" width="250" height="250">-->
-<!--            <figcaption>Monkeypox virus under the microscope</figcaption>-->
-<!--        </figure>-->
-
-<!--        <p>-->
-<!--            Monkeypox is a viral zoonotic disease caused by the monkeypox virus, part of the Orthopoxvirus genus. It was first identified in 1958 in monkeys kept for research, and the first human case was recorded in 1970. The virus can spread from animals to humans and between humans through close contact.-->
-<!--        </p>-->
-
-<!--        <p>Symptoms of monkeypox include:</p>-->
-<!--        <ul class="list-group" >-->
-<!--            <li class="list-group-item list-group-item-warning">Fever</li>-->
-<!--            <li class="list-group-item list-group-item-warning">Headache</li>-->
-<!--            <li class="list-group-item list-group-item-warning">Muscle aches and backache</li>-->
-<!--            <li class="list-group-item list-group-item-warning">Swollen lymph nodes</li>-->
-<!--            <li class="list-group-item list-group-item-warning">Chills</li>-->
-<!--            <li class="list-group-item list-group-item-warning">Exhaustion</li>-->
-<!--            <li class="list-group-item list-group-item-warning">A rash that often starts on the face and spreads to other parts of the body</li>-->
-<!--        </ul>-->
-
-<!--        <p>-->
-<!--            The rash eventually forms scabs and falls off as part of the healing process. In severe cases, complications like secondary infections or pneumonia can occur. Monkeypox is similar to smallpox, but it is less severe and less contagious.-->
-<!--        </p>-->
-
-<!--    </article>-->
-<!--</section>-->
-<!--<section>-->
-<!--    <article>-->
-<!--<h3 >Coronavirus (COVID-19)</h3>-->
-
-<!--<figure>-->
-<!--    <img src="img/coronavirus.jpg" alt="Coronavirus" width="250" height="250">-->
-<!--    <figcaption>Coronavirus under the microscope</figcaption>-->
-<!--</figure>-->
-
-<!--<p>-->
-<!--    Coronavirus disease (COVID-19) is caused by the SARS-CoV-2 virus, a novel coronavirus that was first identified in Wuhan, China, in December 2019. It led to a global pandemic, causing widespread illness and disruptions. COVID-19 primarily spreads through respiratory droplets and can infect individuals through close contact or touching contaminated surfaces.-->
-<!--</p>-->
-
-<!--<p >Symptoms of COVID-19 include:</p>-->
-<!--<ul class="list-group" >-->
-<!--    <li class="list-group-item list-group-item-warning">Fever or chills</li>-->
-<!--    <li class="list-group-item list-group-item-warning">Dry cough</li>-->
-<!--    <li class="list-group-item list-group-item-warning">Shortness of breath or difficulty breathing</li>-->
-<!--    <li class="list-group-item list-group-item-warning">Fatigue</li>-->
-<!--    <li class="list-group-item list-group-item-warning">Muscle or body aches</li>-->
-<!--    <li class="list-group-item list-group-item-warning">Loss of taste or smell</li>-->
-<!--    <li class="list-group-item list-group-item-warning">Sore throat</li>-->
-<!--    <li class="list-group-item list-group-item-warning">Headache</li>-->
-<!--    <li class="list-group-item list-group-item-warning">Congestion or runny nose</li>-->
-<!--    <li class="list-group-item list-group-item-warning">Nausea or vomiting</li>-->
-<!--    <li class="list-group-item list-group-item-warning">Diarrhea</li>-->
-<!--</ul>-->
-
-<!--<p>-->
-<!--    While most cases of COVID-19 result in mild to moderate respiratory illness, severe cases can lead to pneumonia, acute respiratory distress syndrome (ARDS), organ failure, or death, particularly in older adults and individuals with underlying health conditions. Vaccines and public health measures have played a key role in controlling the pandemic.-->
-<!--</p>-->
-<!--    </article>-->
-<!--</section>-->
-<!--<section>-->
-<!--    <article>-->
-<!--<h3 >Heart Disease</h3>-->
-
-<!--<figure>-->
-<!--    <img src="img/heart.jpg" alt="Heart Disease" width="250" height="250">-->
-<!--    <figcaption>Illustration of heart disease</figcaption>-->
-<!--</figure>-->
-
-<!--<p>-->
-<!--    Heart disease refers to a range of conditions that affect the heart, including coronary artery disease, heart rhythm problems (arrhythmias), and congenital heart defects. It is often caused by a combination of lifestyle factors, genetic predisposition, and other health conditions such as high blood pressure and diabetes.-->
-<!--</p>-->
-
-<!--<p>Common symptoms of heart disease include:</p>-->
-<!--<ul class="list-group">-->
-<!--    <li class="list-group-item list-group-item-warning">Chest pain or discomfort</li>-->
-<!--    <li class="list-group-item list-group-item-warning">Shortness of breath</li>-->
-<!--    <li class="list-group-item list-group-item-warning">Fatigue</li>-->
-<!--    <li class="list-group-item list-group-item-warning">Palpitations or irregular heartbeats</li>-->
-<!--    <li class="list-group-item list-group-item-warning">Dizziness or light-headedness</li>-->
-<!--    <li class="list-group-item list-group-item-warning">Swelling in the legs, ankles, or feet</li>-->
-<!--</ul>-->
-
-<!--<p>-->
-<!--    Managing heart disease often involves lifestyle changes, medication, and sometimes surgical interventions to reduce symptoms and improve quality of life.-->
-<!--</p>-->
-<!--    </article>-->
-<!--</section>-->
-
-<!--<section>-->
-<!--    <article>-->
-<!--        <h3 >Fever</h3>-->
-
-<!--        <figure>-->
-<!--            <img src="img/thumb.jpeg" alt="High Temperature" width="250" height="250">-->
-<!--            <figcaption>High body temperature </figcaption>-->
-<!--        </figure>-->
-
-<!--        <p>-->
-<!--            A body temperature above 38°C (100.4°F) is generally considered a fever. Fevers are a common response of the body to infections and other illnesses. They can be caused by various factors including bacterial or viral infections, inflammatory conditions, and other medical issues.-->
-<!--        </p>-->
-
-<!--        <p>Common causes of a temperature above 38°C include:</p>-->
-<!--        <ul class="list-group">-->
-<!--            <li class="list-group-item list-group-item-warning">Infections such as the flu, cold, or COVID-19</li>-->
-<!--            <li class="list-group-item list-group-item-warning" >Inflammatory diseases like rheumatoid arthritis</li>-->
-<!--            <li class="list-group-item list-group-item-warning">Heat exhaustion or heat stroke</li>-->
-<!--            <li class="list-group-item list-group-item-warning">Medication side effects or reactions</li>-->
-<!--        </ul>-->
-
-<!--        <p>-->
-<!--            A fever itself is not usually dangerous, but it can be a sign of an underlying health issue. Persistent or very high fevers should be evaluated by a healthcare professional to determine the cause and appropriate treatment.-->
-<!--        </p>-->
-
-<!--    </article>-->
-<!--</section>-->
-
-<!--  <footer>-->
-<!--      <p> 2024 Densauluq. Gaziza Tanirbergen, Liana Smatulla, Kuanysh Aitzhanov. </p>-->
-<!--  </footer>-->
-
-<!--  </body>-->
-<!--  </html>-->
-
 
 <!DOCTYPE html>
 <html lang="en">
@@ -258,7 +51,7 @@
 <main class="container my-5">
     <section>
         <article class="mb-5">
-            <h3>Severe Acute Respiratory Syndrome (SARS)</h3>
+            <h3 style="color: #19585a">Severe Acute Respiratory Syndrome (SARS)</h3>
             <div class="row">
                 <div class="col-md-4">
                     <img src="img/sars%20virus.jpg" alt="SARS Virus" class="img-fluid">
@@ -283,7 +76,7 @@
 
     <section>
         <article class="mb-5">
-            <h3>Monkeypox</h3>
+            <h3 style="color: #19585a">Monkeypox</h3>
             <div class="row">
                 <div class="col-md-4">
                     <img src="img/monkeypox.jpg" alt="Monkeypox Virus" class="img-fluid">
@@ -309,7 +102,7 @@
 
     <section>
         <article class="mb-5">
-            <h3>Coronavirus (COVID-19)</h3>
+            <h3 style="color: #19585a">Coronavirus (COVID-19)</h3>
             <div class="row">
                 <div class="col-md-4">
                     <img src="img/coronavirus.jpg" alt="Coronavirus" class="img-fluid">
@@ -339,7 +132,7 @@
 
     <section>
         <article class="mb-5">
-            <h3>Heart Disease</h3>
+            <h3 style="color: #19585a">Heart Disease</h3>
             <div class="row">
                 <div class="col-md-4">
                     <img src="img/heart.jpg" alt="Heart Disease" class="img-fluid">
@@ -364,7 +157,7 @@
 
     <section>
         <article>
-            <h3>Fever</h3>
+            <h3 style="color: #19585a">Fever</h3>
             <div class="row">
                 <div class="col-md-4">
                     <img src="img/thumb.jpeg" alt="Person with fever" class="img-fluid">
