--- a/doctors.html
+++ b/doctors.html
@@ -136,8 +136,8 @@
 </nav>
 
 <section class="container my-3">
-    <div class="row">
-        <div class="col-md-3">
+    <div class="row  ">
+        <div class="col-md-3 ml-auto">
             <div class="card mb-3">
                 <img src="img/photo_2024-09-06%2013.16.14.jpeg" class="card-img-top" alt="Dr. Liana">
                 <div class="card-body">
@@ -145,7 +145,7 @@
                     <p class="card-text"><strong>Specialization:</strong> Cardiologist</p>
                     <p class="card-text"><strong>Contact:</strong> liana.smat@densauluq.com</p>
                     <p class="card-text"><strong>Available Days:</strong> Monday, Wednesday, Friday</p>
-                    <a href="appointment.html" class="btn btn-secondary">Make an appointment</a>
+                    <a href="appointment.html" class="btn btn-primary">Make an appointment</a>
                 </div>
             </div>
         </div>
@@ -157,19 +157,19 @@
                     <p class="card-text"> <strong>Specialization:</strong> Dermatologist</p>
                     <p class="card-text"><strong>Contact:</strong> kuan.ait@deunsauluq.com</p>
                     <p class="card-text"><strong>Available Days:</strong> Tuesday, Thursday</p>
-                    <a href="appointment.html" class="btn btn-secondary">Make an appointment</a>
+                    <a href="appointment.html" class="btn btn-primary">Make an appointment</a>
                 </div>
             </div>
         </div>
-        <div class="col-md-3">
-            <div class="card mb-3">
+        <div class="col-md-3 mr-auto">
+            <div class="card mb-3 ">
                 <img src="img/photo_2024-09-06%2013.16.14.jpeg" class="card-img-top" alt="Dr. Gaziza">
                 <div class="card-body">
                     <h5 class="card-title"><strong>Dr. Gaziza Tanirbergen</strong></h5>
                     <p class="card-text "><strong>Specialization:</strong> Neurologist</p>
                     <p class="card-text"> <strong>Contact:</strong> gaziza.tan@densauluq.com</p>
                     <p class="card-text"><strong>Available Days:</strong> Monday, Thursday, Saturday</p>
-                    <a href="appointment.html" class="btn btn-secondary">Make an appointment</a>
+                    <a href="appointment.html" class="btn btn-primary">Make an appointment</a>
                 </div>
             </div>
         </div>
