scroll and burger

--- a/diseases.html
+++ b/diseases.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <script src="darkMode.js"></script>
+    <script src="scrollAnimation.js"></script>
+    <script src="burger.js"></script>
+    <link rel="stylesheet" href="burger.css">
     <link rel="stylesheet" href="Kuanysh_Aitzhanov_style.css">
     <link rel="stylesheet" href="Liana_style.css">
     <title>Densauluq - About Diseases</title>
@@ -52,7 +55,7 @@
 <main class="container my-5">
     <section>
         <article class="mb-5">
-            <h3 style="color: #19585a">Severe Acute Respiratory Syndrome (SARS)</h3>
+            <h3>Severe Acute Respiratory Syndrome (SARS)</h3>
             <div class="row">
                 <div class="col-md-4">
                     <img src="img/sars%20virus.jpg" alt="SARS Virus" class="img-fluid">
@@ -77,7 +80,7 @@
 
     <section>
         <article class="mb-5">
-            <h3 style="color: #19585a">Monkeypox</h3>
+            <h3>Monkeypox</h3>
             <div class="row">
                 <div class="col-md-4">
                     <img src="img/monkeypox.jpg" alt="Monkeypox Virus" class="img-fluid">
@@ -103,7 +106,7 @@
 
     <section>
         <article class="mb-5">
-            <h3 style="color: #19585a">Coronavirus (COVID-19)</h3>
+            <h3>Coronavirus (COVID-19)</h3>
             <div class="row">
                 <div class="col-md-4">
                     <img src="img/coronavirus.jpg" alt="Coronavirus" class="img-fluid">
@@ -133,7 +136,7 @@
 
     <section>
         <article class="mb-5">
-            <h3 style="color: #19585a">Heart Disease</h3>
+            <h3>Heart Disease</h3>
             <div class="row">
                 <div class="col-md-4">
                     <img src="img/heart.jpg" alt="Heart Disease" class="img-fluid">
@@ -158,7 +161,7 @@
 
     <section>
         <article>
-            <h3 style="color: #19585a">Fever</h3>
+            <h3>Fever</h3>
             <div class="row">
                 <div class="col-md-4">
                     <img src="img/thumb.jpeg" alt="Person with fever" class="img-fluid">
