--- a/doctors.html
+++ b/doctors.html
@@ -111,9 +111,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="darkMode.js"></script>
+    <script src="scrollAnimation.js"></script>
     <link rel="stylesheet" href="Kuanysh_Aitzhanov_style.css">
     <link rel="stylesheet" href="Liana_style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+    <script src="burger.js"></script>
+    <link rel="stylesheet" href="burger.css">
     <title>Densauluq</title>
 </head>
 
