--- a/analysis.html
+++ b/analysis.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initialscale=1.0">
     <script src="darkMode.js"></script>
+    <script src="scrollAnimation.js"></script>
     <link rel="stylesheet" href="GazizaDesign.css">
     <link rel="stylesheet" href="Kuanysh_Aitzhanov_style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <script src="burger.js"></script>
+    <link rel="stylesheet" href="burger.css">
     <title>Health analysis - Densauluq</title>
 </head>
 <body>
