--- a/funding.html
+++ b/funding.html
@@ -8,6 +8,9 @@
     <meta name="viewport" content="width=device-width, initialscale=1.0">
     <link rel="stylesheet" href="Liana_style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+    <script src="burger.js"></script>
+    <link rel="stylesheet" href="burger.css">
+    <script src="scrollAnimation.js"></script>
     <title>Densauluq</title>
 </head>
 
