--- a/home_page.html
+++ b/home_page.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initialscale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="darkMode.js"></script>
+    <script src="burger.js"></script>
+    <link rel="stylesheet" href="burger.css">
+    <script src="scrollAnimation.js"></script>
+<!--    <script src="searchBar.js"></script>-->
     <link rel="stylesheet" href="Kuanysh_Aitzhanov_style.css">
 <!--    <link rel="stylesheet" href="Liana_style.css">-->
     <title>Densaulyq</title>
