--- a/registration.html
+++ b/registration.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="Kuanysh_Aitzhanov_style.css">
     <link rel="stylesheet" href="GazizaDesign.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="scrollAnimation.js"></script>
+    <script src="burger.js"></script>
+    <link rel="stylesheet" href="burger.css">
     <title>Log in/Sign up - Densaulyq</title>
 </head>
 <body>
