back to top button

--- a/diseases.html
+++ b/diseases.html
@@ -8,6 +8,7 @@
     <script src="darkMode.js"></script>
     <script src="scrollAnimation.js"></script>
     <script src="burger.js"></script>
+    <script src="functions.js"></script>
     <link rel="stylesheet" href="burger.css">
     <link rel="stylesheet" href="Kuanysh_Aitzhanov_style.css">
     <link rel="stylesheet" href="Liana_style.css">
