--- a/analysis.html
+++ b/analysis.html
@@ -10,6 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <script src="burger.js"></script>
+    <script src="functions.js"></script>
     <link rel="stylesheet" href="burger.css">
     <title>Health analysis - Densauluq</title>
 </head>
