--- a/doctors.html
+++ b/doctors.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <script src="burger.js"></script>
     <link rel="stylesheet" href="burger.css">
-    <script src="../functions.js"></script>
+    <script src="functions.js"></script>
     <title>Densauluq</title>
 </head>
 
