--- a/recommend.html
+++ b/recommend.html
@@ -6,6 +6,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="Kuanysh_Aitzhanov_style.css">
   <script src="burger.js"></script>
+  <script src="functions.js"></script>
   <link rel="stylesheet" href="burger.css">
   <script src="scrollAnimation.js"></script>
   <!--  <link rel="stylesheet" href="Liana_style.css">-->
