--- a/analysis.html
+++ b/analysis.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initialscale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="darkMode.js"></script>
     <script src="scrollAnimation.js"></script>
     <link rel="stylesheet" href="GazizaDesign.css">
@@ -12,11 +12,11 @@
     <script src="burger.js"></script>
     <script src="functions.js"></script>
     <link rel="stylesheet" href="burger.css">
-    <title>Health analysis - Densauluq</title>
+    <title>Health Analysis - Densauluq</title>
 </head>
 <body>
 <header class="text-center text-light py-3" style="background-color: #19585a;">
-    <h1 class="text-light">Health analysis</h1>
+    <h1 class="text-light">Health Analysis</h1>
     <h3 class="text-light">Choose from list please</h3>
     <p>Manage your personal information, appointments, and more.</p>
 </header>
@@ -87,11 +87,25 @@
         </tbody>
     </table>
 </section>
-<br>
-<br>
+
+<br><br>
 <footer class="bg-dark text-light text-center py-3 mt-auto">
     <p>2024 Densauluq. Gaziza Tanirbergen, Liana Smatulla, Kuanysh Aitzhanov.</p>
 </footer>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+<script>
+    // JavaScript для фильтрации данных в реальном времени
+    document.getElementById('search-input').addEventListener('input', function() {
+        const filter = this.value.toLowerCase();
+        const rows = document.querySelectorAll('#analysis-table tbody tr');
+
+        rows.forEach(row => {
+            const text = row.textContent.toLowerCase();
+            row.style.display = text.includes(filter) ? '' : 'none';
+        });
+    });
+</script>
 
 </body>
 </html>
